dark mode fixes and improvements

--- a/src/styles/blog-list.css
+++ b/src/styles/blog-list.css
@@ -35,7 +35,6 @@
 }
 
 .main-content-wrapper .blog-list h4 {
-  color: #000000;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
   font-weight: normal;
